Issue with Turnip compilation on Oneplus 8
I tried to compile Turnip on my Oneplus 8 after a month and compilation is failing with error below.
/usr/bin/ld: src/freedreno/vulkan/libvulkan_freedreno.so.p/tu_device.c.o: in function `tu_trace_read_ts':
/root/mesa/build/../src/freedreno/vulkan/tu_device.c:1305: undefined reference to `tu_device_wait_u_trace'
collect2: error: ld returned 1 exit status
[26/622] Compiling C object src...mon.a.p/program_prog_to_nir.c.o
ninja: build stopped: subcommand failed.